# strong2020-salamanca

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Extracting_Physical_Observables.ipynb  FurtherTopics.ipynb  FurtherTopicsWork.ipynb  README.md  Strong2020Utilities.ipynb  _config.yml  _toc.yml  environment.yml  lecture02.ipynb  lecture06-gammap.ipynb  lecture06-nbarp.ipynb  lecture09.ipynb  lecture12_2_evaluateInvariantMass_gammap-solution.ipynb  lecture12_3_relativisticKinematics.ipynb  lecture12_4_angles.ipynb  lecture12_5_phaseSpaceSimulation.ipynb  lecture12_6_longitudinalPlots.ipynb  lecture12a-gammap-solution.ipynb  lecture12b-kinematics.ipynb  lecture12c-angles.ipynb  lecture12d-phasespace.ipynb  lecture12e-longitudinal.ipynb  lecture17.ipynb  lecture2.ipynb  lecture24-furtherLikelihood.ipynb  lecture6-gammap-solution.ipynb  lecture6-gammap.ipynb  lecture6-nbarp.ipynb  lecture6.ipynb  lecture9.ipynb  pyproject.toml  requirements.txt
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.8.txt  py3.9.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  lock.yml  requirements.yml
docs/: _config.yml  _toc.yml  conf.py  index.md  lecture02.ipynb  lecture06-gammap.ipynb  lecture06-nbarp.ipynb  lecture09.ipynb  lecture09Solution.ipynb  lecture11.ipynb  lecture12a-gammap-solution.ipynb  lecture12b-kinematics.ipynb  lecture12c-angles.ipynb  lecture12d-phasespace.ipynb  lecture12e-longitudinal.ipynb  lecture17.ipynb  lecture18.ipynb  lecture21.ipynb  lecture24-likelihood.ipynb  lecture24.ipynb  lecture24_utilities.ipynb
docs/lecture02/: index.ipynb  pyproject.toml
docs/lecture06-gammap/: index.ipynb  pyproject.toml
docs/lecture06-nbarp/: index.ipynb  pyproject.toml
docs/lecture09/: index.ipynb  pyproject.toml
docs/lecture12a-gammap-solution/: index.ipynb  pyproject.toml
docs/lecture12b-kinematics/: index.ipynb  pyproject.toml
docs/lecture12c-angles/: index.ipynb  pyproject.toml
docs/lecture12d-phasespace/: index.ipynb  pyproject.toml
docs/lecture12e-longitudinal/: index.ipynb  pyproject.toml
docs/lecture17/: index.ipynb  pyproject.toml
docs/lecture18/: .gitignore  index.ipynb  lecture18.cpp  pyproject.toml
docs/lecture24/: index.ipynb  pyproject.toml  utilities.ipynb
