[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [
    {name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"},
    {name = "STRONG2020"},
]
description = "Jupyter notebooks for the STRONG2020 school in Salamanca, 2023"
dynamic = ["version"]
name = "strong2020-salamanca"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff",
    "sphinx-autobuild",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "test"},
]
doc = [
    "ipympl",
    "myst-nb",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-exercise",
    "sphinx-togglebutton",
    "sphinx~=5.0", # for sphinx-exercise
    {include-group = "notebooks"},
]
jupyter = [
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
    {include-group = "notebooks"},
]
notebooks = ["pyproject-local-kernel"]
test = [
    "nbmake",
    {include-group = "notebooks"},
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--nbmake",
    "--nbmake-timeout=1200",
]
filterwarnings = [
    "error",
]
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B018",
    "C90",
    "D",
    "E303",
    "E703",
    "N806",
    "N816",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "S101",
    "T20",
    "TC00",
]
"docs/*" = [
    "INP001",
    "S101",
    "S113",
]
"docs/conf.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    docnb-force,
    linkcheck,
    sty,
skip_install = True
skip_missing_interpreters = True
skipsdist = True

[testenv]
passenv = *
setenv =
    PYTHONHASHSEED = 0

[testenv:doc]
allowlist_externals =
    sphinx-build
commands =
    sphinx-build \
        --keep-going \
        -b html \
        -T \
        -W \
        docs/ docs/_build/html
description = Build documentation as website
passenv = *
setenv =
    PYTHONWARNINGS =

[testenv:docnb]
base = doc
description = {[testenv:doc]description} with cached notebook execution
setenv =
    {[testenv:doc]setenv}
    EXECUTE_NB = yes

[testenv:docnb-force]
base = doc
description = {[testenv:doc]description} with notebook execution (no cache)
setenv =
    {[testenv:doc]setenv}
    FORCE_EXECUTE_NB = yes

[testenv:doclive]
allowlist_externals =
    sphinx-autobuild
commands =
    sphinx-autobuild \
        --ignore=docs/_build/ \
        --open-browser \
        --watch=docs \
        docs/ docs/_build/html
description = Set up a server to directly preview changes to the HTML pages
passenv = *
setenv =
    PYTHONWARNINGS =

[testenv:docnblive]
base = doclive
description = {[testenv:doclive]description} with cached notebook execution
setenv =
    {[testenv:doclive]setenv}
    EXECUTE_NB = yes

[testenv:linkcheck]
allowlist_externals =
    sphinx-build
base = doc
commands =
    sphinx-build \
        -b linkcheck \
        -T \
        docs/ docs/_build/linkcheck
description = Check external links in the documentation (requires internet connection)

[testenv:nb]
allowlist_externals =
    pytest
commands =
    pytest {posargs:docs}
description = Run all notebooks with pytest

[testenv:sty]
allowlist_externals =
    pre-commit
commands =
    pre-commit run --all-files {posargs}
description = Perform all linting, formatting, and spelling checks
"""
