[project]
dependencies = [
    "matplotlib",
    "numpy",
    "phasespace",
    "pylorentz",
    "tf_keras",
]
name = "lecture"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN001",
    "ANN201",
    "COM812",
    "CPY001",
    "D",
    "ISC001",
]
select = ["ALL"]

[tool.uv.workspace]
