[project]
dependencies = [
    "ampform>=0.14.8",
    "nbformat>=4.2.0",
    "numpy",
    "plotly",
    "sympy",
]
name = "lecture"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ARG002",
    "COM812",
    "CPY001",
    "D",
    "E731",
    "FBT00",
    "ISC001",
    "N801",
    "N806",
    "PLC2401",
    "PLR0913",
    "PLR0917",
    "PLR2004",
    "RUF027",
    "S101",
]
select = ["ALL"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["_latex_repr_"]

[tool.uv.workspace]
