[project]
dependencies = [
    "gdown",
    "iminuit",
    "import-ipynb",
    "matplotlib",
    "numpy",
    "sweights",
]
name = "lecture"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN001",
    "ANN201",
    "B023",
    "BLE001",
    "COM812",
    "CPY001",
    "D",
    "DOC201",
    "E402",
    "E501",
    "E731",
    "ERA001",
    "ISC001",
    "N80",
    "N816",
    "PD011",
    "PLR0913",
    "PLR0917",
    "PLR2004",
    "PTH110",
    "S110",
    "T201",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.uv.workspace]
